syntax = "proto3";

enum ResponseStatus {
  Ok = 0;
  Error = 1;
  Auth = 2;
}

message Person {
  string name = 1;
  int32 age = 2;
}

service AddressBookService {
  // Add a person to the address book.
  rpc AddPerson(Person) returns (Person);

  // Get a person from their name
  rpc GetPersonByName(GetPersonByNameRequest) returns (GetPersonByNameResponse);
}

message GetPersonByNameRequest {
  string name = 1;
}

message GetPersonByNameResponse {
  Person person = 1;
  ResponseStatus status = 2;
}
